feat: adicionar exibição de codec dos arquivos
